* Correct excerpt hook handling so excerpts can be used with other Jekyll plugins. (#230)
* Enhance test setup to allow multiple `_config.yml` files per fixture.
* Switch to GitHub Actions based CI: drop travis and appveyor. (#240)
* Implement `implicit_page_variables` asciidoc key support. (#207)
* Support Jekyll `unpublished` key overrriding AsciiDoc `page-published` attribute. (#257)
* Document existing behavior around yaml page attributes and implement a way to merge config and page attributes for page variables. (#158)

== 3.0.0.beta.2 (2019-06-03) - @mojavelinux

* allow site-wide AsciiDoc attributes to also be defined on `asciidoc` key in site configuration (#126)
* set date page variable from revdate for any document in a collection (posts or otherwise) (#202)
* allow non-ASCII word character to be used in name of attribute reference in config file
* use File.write instead of IO.write (as IO.write has extra magic we don't need)
* auto-generate excerpts for posts and documents written in AsciiDoc (#200)

== 3.0.0.beta.1 (2018-12-29) - @mojavelinux

* only support Ruby >= 2.2.0 and Jekyll >= 3.0.0
* update tests to only run against supported versions
* load processor eagerly (at end of plugin initialization)
* don't crash if document body is empty (#179)
* process AsciiDoc header if page has only an AsciiDoc header but no body
* honor layout defined in frontmatter defaults (#187)
* allow page layout to be soft set in site config (#193)
* set asciidoc property to true on all AsciiDoc pages (#189)
* set asciidoc property to true on any (AsciiDoc) page enriched by this plugin (i.e., page.asciidoc) (#189)
* don't call nil_or_empty? outside of an Asciidoctor context (#142)
* don't delete category and tag; sync w/ first entry in array of matching property (#160)
* don't coerce a falsy value of page-layout defined in _config.yml to nil
* integrate collections that are not written (output flag is set to false) (#161)
* document how to enable STEM support (#163)