@@ -7,6 +7,7 @@ asciidoc:
     - implicit2
 
 asciidoctor:
+  enable_attribute_value_coercion: true
   attributes:
     page-attr:
       one: one-value
